[project]
name = "tuya-energy"
version = "1.0.0"
description = "Local Tuya Energy integration for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "DjTiagoSantos" }
]
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
    "SIM",
    "C4",
]

ignore = [
    "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
